name:                ghcjs-xhr
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/tdammers/ghcjs-xhr#readme
license:             BSD3
license-file:        LICENSE
author:              Tobias Dammers
maintainer:          tdammers@gmail.com
copyright:           2016 Tobias Dammers
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs: src
  exposed-modules: JavaScript.XHR
  build-depends: base
               , ghcjs-base
               , text
  js-sources: src/impl.js
  default-language: Haskell2010
